# ITHACA-SEM

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Channel_1p5.fld  Channel_1p5.xml  Channel_1p5_TT.xml  Get  LICENSE  README  README.md  VERSION  dist-exclude  distribute.sh  installHowTo.txt  myIncNavierStokesSolver.cpp  myIncNavierStokesSolver.cpp~
deprecated_Nek440/: CMakeLists.txt  myIncNavierStokesSolver.cpp
deprecated_Nek440/AdvectionTerms/: AdjointAdvection.h  AlternateSkewAdvection.cpp  NavierStokesAdvection.cpp  NoAdvection.cpp  NoAdvection.cpp~  SkewSymmetricAdvection.cpp  SkewSymmetricAdvection.h
deprecated_Nek440/EquationSystems/: CoupledLinearNS.cpp  CoupledLinearNS.cpp~  CoupledLinearNS.h  CoupledLinearNS_ROM.cpp  CoupledLinearNS_TT.cpp  CoupledLinearNS_TT.cpp~  CoupledLinearNS_TT.h  CoupledLinearNS_TT_Deflation.cpp  CoupledLinearNS_trafoP.cpp~  CoupledLinearNS_trafoP.h  CoupledLinearNS_trafoP_Deflation.cpp  CoupledLocalToGlobalC0ContMap.cpp  IncNavierStokes.cpp  StandardExtrapolate.h  SubSteppingExtrapolate.cpp~  SubSteppingExtrapolate.h  SubSteppingExtrapolateWeakPressure.cpp  WeakPressureExtrapolate.cpp  WeakPressureExtrapolate.h
deprecated_Nek440/Forcing/: ForcingMovingBody.cpp  ForcingMovingBody.h  ForcingStabilityCoupledLNS.cpp~
deprecated_Nek440/Utilities/: AddModeTo2DFld  Aliasing.cpp  CFLStep  CFLStep.cpp  FldAddFalknerSkanBL  Makefile  cmake_install.cmake
docs/developer-guide/: CMakeLists.txt  README.md  developer-guide.bib  developer-guide.tex  developers-guide.bib  developers-guide.tex  styling.cfg
docs/user-guide/: CMakeLists.txt  memoir.4ht  styling.cfg  user-guide.bib  user-guide.tex
exercises/: CMakeLists.txt  FindNektar++.cmake  Tutorial1.cpp  Tutorial2.cpp  Tutorial3.cpp
exercises/BookExercises/: CHapter2Exercise5.cpp  CMakeLists.txt  Chapter1Exercise4b.xml  Chapter2Exercise1.cpp  Chapter2Exercise2.cpp  Chapter2Exercise3.cpp  Chapter2Exercise4.cpp  Chapter2Exercise4a.xml  Chapter2Exercise5.cpp  Chapter3Exercise1.cpp  Chapter3Exercise2.cpp  Chapter3Exercise3.cpp  Chapter4Exercise1.cpp  Chapter4Exercise2.cpp  Chapter4Exercise3.cpp  Chapter4Exercise4.cpp  Chapter4Exercise4_Quad.xml  Chapter4Exercise4_Quad_P10.xml  Chapter4Exercise4_Quad_P4.xml  Chapter4Exercise4_Quad_P5.xml  Chapter4Exercise4_Quad_P6.xml  Chapter4Exercise4_Quad_P7.xml  Chapter4Exercise4_Quad_P8.xml  Chapter4Exercise4_Quad_P9.xml  Chapter4Exercise5.cpp  Chpater2Exercise4.cpp
exercises/TutorialCambridge/: CambridgeTutorial.tex  ToDo.rtf  bfs2.geo  cylinder_gab2.geo
exercises/TutorialExercises/: CMakeLists.txt  QuadMesh.xml  Tutorial1Exercise1.cpp  Tutorial1Exercise2.cpp  Tutorial1Exercise3.cpp  Tutorial1WithSolution.cpp  Tutorial2Exercise1.cpp  Tutorial2Exercise2.cpp  Tutorial2WithSolution.cpp  Tutorial3Exercise1.cpp  Tutorial3WithSolution.cpp
pkg2/: CMakeLists.txt
regression/: CMakeLists.txt  main.cpp  makeReg.cpp
regression/Auxiliary/: regBase.cpp  regBase.h
regression/Demo/: CMakeLists.txt  Helmholtz2D.ok  demoTest.cpp  regDemo.cpp  regDemo.h  regH2D.cpp  regH2D.h
regression/Solver/: AdvectionDiffusionReactionSolver.ok  CMakeLists.txt  EulerSolver.ok  IncNavierStokesSolver.ok  regSolver.cpp  regSolver.h  solverTest.cpp
regressionTests/: CMakeLists.txt  runtests.sh
regressionTests/Auxiliary/: RegressBase.cpp  RegressBase.h
regressionTests/Demos/: CMakeLists.txt
regressionTests/Solvers/: CMakeLists.txt
solvers/: CMakeLists.txt  FindNektar++.cmake
solvers/ADR2DManifoldSolver/: ADR2DManifold.cpp  ADR2DManifold.h  ADR2DManifoldSolver.cpp  AdvectionSphere.xml  AlievPanfilovDemo.xml  CMakeLists.txt  DiffusionReactionSphere.xml  LinearMG.xml  Regspherec0.xml  Regspherec1.xml
solvers/ADRSolver/: ADRSolver.cpp  CMakeLists.txt  EquationSystem.cpp  EquationSystem.h  Factory.hpp  SessionReader.cpp  SessionReader.h
solvers/APESolver/: APESolver.cpp  CMakeLists.txt
solvers/AcousticSolver/: APESolver.cpp  AcousticSolver.cpp  CMakeLists.txt
solvers/AdvectionDiffusionReactionSolver/: AdvectionDiffusionReaction.cpp  AdvectionDiffusionReaction.h  AdvectionDiffusionReactionSolver.cpp  CMakeLists.txt  GaussianHump_1D.xml  GaussianHump_Quad.xml  GaussianHump_QuadTri.xml  GaussianHump_QuadTri_AD.xml  GaussianHump_QuadTri_EXDF.xml  GaussianHump_Tri.xml  PlaneWave.xml  TestAdvectionDiffusionReaction.xml  Test_Advection.xml  Test_AdvectionDiffusion.xml  Test_DiffusionReaction.xml  Test_ExDiffusion.xml  Test_ImDiffusion.xml  Test_InviscidBurger.xml
solvers/Auxiliary/: ADRBase.cpp  ADRBase.h  AdvectionDiffusionReaction.cpp  AdvectionDiffusionReaction.h  BoussinesqEquations.cpp  BoussinesqEquations.h  CMakeLists.txt  Driver.cpp  Driver.h  DriverArnoldi.cpp  DriverArnoldi.h  DriverArnoldi.hpp  DriverArpack.cpp  DriverArpack.h  DriverModifiedArnoldi.cpp  DriverModifiedArnoldi.h  DriverStandard.cpp  DriverStandard.h  EquationSystem.cpp  EquationSystem.h  EulerEquations.cpp  EulerEquations.h  ShallowWaterEquations.cpp  ShallowWaterEquations.h  UnsteadySystem.cpp  UnsteadySystem.h
solvers/BoussinesqSolver/: BoussinesqEquations.cpp  BoussinesqEquations.h  BoussinesqSolver.cpp  CMakeLists.txt  PeriodicWave_Quad.xml
solvers/CardiacEPSolver/: CMakeLists.txt  CardiacEPSolver.cpp
solvers/CompressibleFlowSolver/: CMakeLists.txt  CompressibleFlowSolver.cpp
solvers/DiffusionSolver/: CMakeLists.txt  (+5 more)
tests/: CMakeLists.txt  Metric.cpp  Metric.h  MetricEigenvalue.cpp  MetricEigenvalue.h  MetricFile.cpp  MetricFile.h  MetricL2.cpp  MetricL2.h  MetricLInf.cpp  MetricLInf.h  MetricNoWarning.cpp  MetricNoWarning.h  MetricPrecon.cpp  MetricPrecon.h  MetricRegex.cpp  MetricRegex.h  TestData.cpp  TestData.h  TestException.hpp  Tester.cpp  Tester.cpp.in  sha1.h
utilities/: CMakeLists.txt  Doxyfile  FindBoost.cmake  FindLoki.cmake  FindNektar++.cmake  FindTinyXml.cmake  FldAddFld.cpp  FldAddMultiShear.cpp  FldAddScalGrad.cpp  FldAddScalGrad_elmt.cpp  FldAddWSS.cpp  Makefile  MeshConvert.cpp  ProbeFld.cpp  XmlToTecplot.cpp  XmlToTecplotWireFrame.cpp  XmlToVtk.cpp
(+7322 files in other folders)
